--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -101,7 +101,7 @@
 		};
 	};
 
-        leds {
+    leds {
 		compatible = "gpio-leds";
 
 		led_blue {
@@ -225,13 +225,23 @@
 		};
 	};
 
+	dc_in: regulator-vcc_12v {
+			compatible = "regulator-fixed";
+			regulator-name = "VCC_12V";
+			regulator-min-microvolt = <12000000>;
+			regulator-max-microvolt = <12000000>;
+			regulator-boot-on;
+			regulator-always-on;
+	};
+
 	vddgpu: regulator-vddgpu {
-		compatible = "regulator-fixed";
-		regulator-name = "mali";
-		regulator-min-microvolt = <800000>;
-		regulator-max-microvolt = <800000>;
-		vin-supply = <&ao_5v>;
-		regulator-always-on;
+			compatible = "regulator-fixed";
+			regulator-name = "mali";
+			regulator-min-microvolt = <950000>;
+			regulator-max-microvolt = <950000>;
+			vin-supply = <&dc_in>;
+			regulator-boot-on;
+			regulator-always-on;
 	};
 
 	openvfd {
