--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -225,6 +225,25 @@
 		};
 	};
 
+    dc_in: regulator-vcc_12v {
+            compatible = "regulator-fixed";
+            regulator-name = "VCC_12V";
+            regulator-min-microvolt = <12000000>;
+            regulator-max-microvolt = <12000000>;
+            regulator-boot-on;
+            regulator-always-on;
+    };
+
+    vddgpu: regulator-vddgpu {
+            compatible = "regulator-fixed";
+            regulator-name = "mali";
+            regulator-min-microvolt = <950000>;
+            regulator-max-microvolt = <950000>;
+            vin-supply = <&dc_in>;
+            regulator-boot-on;
+            regulator-always-on;
+    };
+
 	openvfd {
 		compatible = "open,vfd";
 		dev_name = "openvfd";
@@ -292,5 +311,6 @@
 
 // gpu mail 450
 &mali {
+    mali-supply=<&vddgpu>;
     status = "okay";
 };
