--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -20,6 +20,19 @@
 		reg = <0x0 0x0 0x0 0x80000000>;// 2G
 	};
 
+	reserved-memory {
+		#address-cells = <2>;
+		#size-cells = <2>;
+		ranges;
+
+		linux,cma {
+			compatible = "shared-dma-pool";
+			reg = <0x0 0x23000000 0x0 0x4000000>; // 64MB
+			reusable;
+			linux,cma-default;
+		};
+	};//64M
+
 	dio2133: analog-amplifier {
 		compatible = "simple-audio-amplifier";
 		sound-name-prefix = "AU2";
@@ -308,3 +321,4 @@
 	mali-supply=<&vddgpu>;
 	status = "okay";
 };
+
