--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -276,21 +276,23 @@
 	hdmi-supply = <&hdmi_5v>;
 };
 
-eth_link_led_pins: eth-link-led-pins {
-    mux {
-        groups = "GPIOZ_14"; // 替换"eth_link_led", 使用具体GPIO组
-        function = "gpio_periphs"; // 功能改为通用的GPIO功能
-        bias-disable; // 禁止上下拉
-        output-low; // 输出模式，初始低电平。这是关键！
+&pinctrl_periphs {
+    eth_link_led_pins: eth-link-led-pins {
+        mux {
+            groups = "GPIOZ_14";       /* 使用你确认的物理引脚组 */
+            function = "gpio_periphs"; /* 改为通用的GPIO功能 */
+            bias-disable;              /* 禁用内部上拉/下拉 */
+            output-low;                /* 初始输出低电平，防止灯常亮 */
+        };
     };
-};
 
-eth_act_led_pins: eth-act-led-pins {
-    mux {
-        groups = "GPIOZ_15"; // 替换"eth_act_led", 使用具体GPIO组
-        function = "gpio_periphs"; // 功能改为通用的GPIO功能
-        bias-disable; // 禁止上下拉
-        output-low; // 输出模式，初始低电平。
+    eth_act_led_pins: eth-act-led-pins {
+        mux {
+            groups = "GPIOZ_15";       /* 使用你确认的物理引脚组 */
+            function = "gpio_periphs"; /* 改为通用的GPIO功能 */
+            bias-disable;              /* 禁用内部上拉/下拉 */
+            output-low;                /* 初始输出低电平，防止灯常亮 */
+        };
     };
 };
 
@@ -336,6 +338,7 @@ eth_act_led_pins: eth-act-led-pins {
 	mali-supply=<&vddgpu>;
 	status = "okay";
 };
+
 
 
 
