--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -122,13 +122,13 @@
 			gpios = <&gpio GPIODV_27 GPIO_ACTIVE_HIGH>; // 76  gpio 477
 			default-state = "off";
 		};
-/*		
+		
 		led_link {
 			label = "led_link";
 			color = <LED_COLOR_ID_YELLOW>;
 			gpios = <&gpio GPIOZ_14 GPIO_ACTIVE_HIGH>;
 			default-state = "off";
-			linux,default-trigger = "netdev";
+			linux,default-trigger = "mdio_mux-0.1:08:link";
 		};
 		
 		led_act {
@@ -138,7 +138,6 @@
 			default-state = "off";
 			linux,default-trigger = "netdev";
 		};
-*/
 	};
 
 	thermal-zones {
@@ -221,25 +220,6 @@
 		};
 	};
 
-	dc_in: regulator-vcc_12v {
-		compatible = "regulator-fixed";
-		regulator-name = "VCC_12V";
-		regulator-min-microvolt = <12000000>;
-		regulator-max-microvolt = <12000000>;
-		regulator-boot-on;
-		regulator-always-on;
-	};
-
-	vddgpu: regulator-vddgpu {
-		compatible = "regulator-fixed";
-		regulator-name = "mali";
-		regulator-min-microvolt = <950000>;
-		regulator-max-microvolt = <950000>;
-		vin-supply = <&dc_in>;
-		regulator-boot-on;
-		regulator-always-on;
-	};
-
 	openvfd {
 		compatible = "open,vfd";
 		dev_name = "openvfd";
@@ -276,34 +256,16 @@
 	hdmi-supply = <&hdmi_5v>;
 };
 
-&pinctrl_periphs {
-    eth_link_led_pins_cm: eth-link-led-pins-cm {
-        mux {
-            groups = "GPIOZ_14";       /* 使用你确认的物理引脚组 */
-            function = "gpio_periphs"; /* 改为通用的GPIO功能 */
-            bias-disable;              /* 禁用内部上拉/下拉 */
-            output-low;                /* 初始输出低电平，防止灯常亮 */
-        };
-    };
-
-    eth_act_led_pins_cm: eth-act-led-pins-cm {
-        mux {
-            groups = "GPIOZ_15";       /* 使用你确认的物理引脚组 */
-            function = "gpio_periphs"; /* 改为通用的GPIO功能 */
-            bias-disable;              /* 禁用内部上拉/下拉 */
-            output-low;                /* 初始输出低电平，防止灯常亮 */
-        };
-    };
-};
-
 &ethmac {
     status = "okay";
 };
 
+/*
 &internal_phy {
-	pinctrl-0 = <&eth_link_led_pins_cm>, <&eth_act_led_pins_cm>;
+	pinctrl-0 = <&eth_link_led_pins>, <&eth_act_led_pins>;
 	pinctrl-names = "default";
 };
+*/
 
 &hdmi_tx_tmds_port {
 	hdmi_tx_tmds_out: endpoint {
@@ -335,9 +297,9 @@
 };
 
 &mali {
-	mali-supply=<&vddgpu>;
 	status = "okay";
 };
+
 
 
 
