--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -126,7 +126,7 @@
 	    // 网口链接灯（Link LED）：通常常亮表示链接建立
 	    eth_link_led {
 	        label = "eth_link_led";  // LED标签（用户空间识别用）
-	        gpios = <&gpio GPIOZ_14 GPIO_ACTIVE_LOW>;  // 低电平点亮（根据硬件调整）
+	        gpios = <&gpio GPIOZ_14 GPIO_ACTIVE_HIGH>;  // 低电平点亮（根据硬件调整）
 	        default-state = "off";  // 默认状态（off/on）
 
 	        linux,default-trigger = "netdev";  // 触发方式：跟随网口状态 mdio_mux-0.1:08:link
@@ -137,7 +137,7 @@
 	    // 网口活动灯（Activity LED）：闪烁表示数据传输
 	    eth_act_led {
 	        label = "eth_act_led";
-	        gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_LOW>;  // 低电平点亮（根据硬件调整）
+	        gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_HIGH>;  // 低电平点亮（根据硬件调整）
 	        default-state = "off";
 	        // 可选：关联网口活动状态
 	        linux,default-trigger = "netdev";
@@ -318,5 +318,6 @@
     mali-supply=<&vddgpu>;
 	status = "okay";
 };
+
 
 
