--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -11,6 +11,8 @@
 #include <dt-bindings/input/input.h>
 #include <dt-bindings/sound/meson-aiu.h>
 
+/delete-node/ &{/reserved-memory/linux,cma};
+
 / {
 	compatible = "amlogic,p212", "amlogic,s905x", "amlogic,meson-gxl";
 	model = "Amlogic Meson GXL (S905X) CumeBox2 Board";
@@ -318,6 +320,7 @@
     mali-supply=<&vddgpu>;
 	status = "okay";
 };
+
 
 
 
