--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -144,7 +144,7 @@
 	        gpios = <&gpio GPIOZ_14 GPIO_ACTIVE_HIGH>;  // 高电平点亮
 	        default-state = "off";  // 默认状态（off/on）
 
-	        linux,default-trigger = “mdio_mux-0.1:08:link";  // 触发方式：跟随网口状态 mdio_mux-0.1:08:link
+	        linux,default-trigger = "mdio_mux-0.1:08:link";  // 触发方式：跟随网口状态 mdio_mux-0.1:08:link
 	        netdev-name = "eth0";  // 关联的网口
 	        netdev-mode = "link";  // 触发条件：链接建立时亮
 	    };
@@ -333,3 +333,4 @@
     mali-supply=<&vddgpu>;
 	status = "okay";
 };
+
