--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -114,6 +114,9 @@
 
 	leds {
 		compatible = "gpio-leds";
+	    pinctrl-0 = <&eth_link_led_pins>, <&eth_act_led_pins>;
+	    pinctrl-names = "default";
+
 		led_blue {
 			label = "led_blue";
 			color = <LED_COLOR_ID_BLUE>;
@@ -137,27 +140,21 @@
 			gpios = <&gpio GPIODV_27 GPIO_ACTIVE_HIGH>; // 76  gpio 477
 			default-state = "off";
 		};
-
-	    // 网口链接灯（Link LED）：通常常亮表示链接建立
-	   eth_link_led {
-	        label = "eth_link_led";  // LED标签（用户空间识别用）
-	        gpios = <&gpio GPIOZ_14 GPIO_ACTIVE_HIGH>;  // 高电平点亮
-	        default-state = "off";  // 默认状态（off/on）
-
-	        linux,default-trigger = "mdio_mux-0.1:08:link";  // 触发方式：跟随网口状态 mdio_mux-0.1:08:link
-	        netdev-name = "eth0";  // 关联的网口
-	        netdev-mode = "link";  // 触发条件：链接建立时亮
-	    };
 	
-	    // 网口活动灯（Activity LED）：闪烁表示数据传输
-	    eth_act_led {
-	        label = "eth_act_led";
-	        gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_HIGH>;  // 高电平点亮
-	        default-state = "off";
-
+	    eth_link_led: eth_link_led {
+	        label = "eth_link_led";
+	        gpios = <&gpio GPIOZ_14 GPIO_ACTIVE_HIGH>;
 	        linux,default-trigger = "netdev";
 	        netdev-name = "eth0";
-	        netdev-mode = "tx rx";  // 触发条件：发送/接收数据时闪烁
+	        netdev-mode = "link";
+	    };
+	
+	    eth_act_led: eth_act_led {
+	        label = "eth_act_led";
+	        gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_HIGH>;
+	        linux,default-trigger = "netdev";
+	        netdev-name = "eth0";
+	        netdev-mode = "tx rx";
 	    };
 	};
 
@@ -333,4 +330,5 @@
     mali-supply=<&vddgpu>;
 	status = "okay";
 };
+
 
