--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -113,50 +113,53 @@
 	};
 
 	leds {
-		compatible = "gpio-leds";
+	    compatible = "gpio-leds";
 	    pinctrl-0 = <&eth_link_led_pins>, <&eth_act_led_pins>;
 	    pinctrl-names = "default";
 
-		led_blue {
-			label = "led_blue";
-			color = <LED_COLOR_ID_BLUE>;
-			gpios = <&gpio GPIODV_24 GPIO_ACTIVE_HIGH>; // 73  gpio 474
-			default-state = "off";
-			linux,default-trigger = "default-on";
-		};
-		
-		led_red {
-			label = "led_red";
-			color = <LED_COLOR_ID_RED>;
-			function = LED_FUNCTION_POWER;
-			gpios = <&gpio GPIODV_26 GPIO_ACTIVE_HIGH>; // 75 gpio 476
-			default-state = "off";
-			panic-indicator;
-		};
-		
-		led_green {
-			label = "led_green";
-			color = <LED_COLOR_ID_GREEN>;
-			gpios = <&gpio GPIODV_27 GPIO_ACTIVE_HIGH>; // 76  gpio 477
-			default-state = "off";
-		};
-	
+	    /* 网口指示灯 */
 	    eth_link_led: eth_link_led {
 	        label = "eth_link_led";
-	        gpios = <&gpio GPIOZ_14 GPIO_ACTIVE_HIGH>;
-	        linux,default-trigger = "netdev";
-	        netdev-name = "eth0";
-	        netdev-mode = "link";
+	        gpios = <&gpio GPIOZ_14 GPIO_ACTIVE_HIGH>;  // 硬件引脚：GPIOZ_14
+	        linux,default-trigger = "netdev";           // 触发方式：跟随网口状态
+	        netdev-name = "eth0";                       // 关联网口：eth0
+	        netdev-mode = "link";                       // 触发条件：链路建立时点亮
 	    };
 	
 	    eth_act_led: eth_act_led {
 	        label = "eth_act_led";
-	        gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_HIGH>;
+	        gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_HIGH>;  // 硬件引脚：GPIOZ_15
 	        linux,default-trigger = "netdev";
 	        netdev-name = "eth0";
-	        netdev-mode = "tx rx";
+	        netdev-mode = "tx rx";                      // 触发条件：收发数据时闪烁
 	    };
-	};
+	
+	    /* 系统状态指示灯 */
+	    led_blue: led_blue {
+	        label = "led_blue";
+	        color = <LED_COLOR_ID_BLUE>;
+	        gpios = <&gpio GPIODV_24 GPIO_ACTIVE_HIGH>; // 硬件引脚：GPIODV_24（全局编号474）
+	        default-state = "off";                      // 初始状态：关闭
+	        linux,default-trigger = "default-on";       // 触发方式：默认常亮
+	    };
+	
+	    led_red: led_red {
+	        label = "led_red";
+	        color = <LED_COLOR_ID_RED>;
+	        function = LED_FUNCTION_POWER;              // 功能标识：电源指示灯
+	        gpios = <&gpio GPIODV_26 GPIO_ACTIVE_HIGH>; // 硬件引脚：GPIODV_26（全局编号476）
+	        default-state = "off";
+	        panic-indicator;                            // 特性：系统崩溃时点亮
+	    };
+	
+	    led_green: led_green {
+	        label = "led_green";
+	        color = <LED_COLOR_ID_GREEN>;
+	        gpios = <&gpio GPIODV_27 GPIO_ACTIVE_HIGH>; // 硬件引脚：GPIODV_27（全局编号477）
+	        default-state = "off";
+	        //linux,default-trigger = "heartbeat";
+	    };
+    };
 
 	thermal-zones {
 		cpu-thermal {
@@ -330,6 +333,7 @@
     mali-supply=<&vddgpu>;
 	status = "okay";
 };
+
 
 
 
