--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -122,16 +122,16 @@
 	        label = "eth_link_led";
 	        gpios = <&gpio GPIOZ_14 GPIO_ACTIVE_HIGH>;  // 硬件引脚：GPIOZ_14
 	        linux,default-trigger = "netdev";           // 触发方式：跟随网口状态
-	        netdev-name = "eth0";                       // 关联网口：eth0
-	        netdev-mode = "link";                       // 触发条件：链路建立时点亮
+	        linux,netdev-name = "eth0";                       // 关联网口：eth0
+	        linux,netdev-mode = "link";                       // 触发条件：链路建立时点亮
 	    };
 	
 	    eth_act_led: eth_act_led {
 	        label = "eth_act_led";
 	        gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_HIGH>;  // 硬件引脚：GPIOZ_15
 	        linux,default-trigger = "netdev";
-	        netdev-name = "eth0";
-	        netdev-mode = "tx rx";                      // 触发条件：收发数据时闪烁
+	        linux,netdev-name = "eth0";
+	        linux,netdev-mode = "tx rx";                      // 触发条件：收发数据时闪烁
 	    };
 	
 	    /* 系统状态指示灯 */
@@ -333,6 +333,7 @@
     mali-supply=<&vddgpu>;
 	status = "okay";
 };
+
 
 
 
