--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -134,10 +134,11 @@
 	    led_blue: led_blue {
 	        label = "led_blue";
 	        color = <LED_COLOR_ID_BLUE>;
-           function = LED_FUNCTION_STATUS;
+            function = LED_FUNCTION_STATUS;
 	        gpios = <&gpio GPIODV_24 GPIO_ACTIVE_HIGH>;       // 硬件引脚：GPIODV_24（全局编号474）
 	        default-state = "off";                            // 初始状态：关闭
 	        linux,default-trigger = "default-on";             // 触发方式：默认常亮
+            panic-indicator-inhibit
 	    };
 	
 	    led_red: led_red {
@@ -331,6 +332,7 @@
     mali-supply=<&vddgpu>;
 	status = "okay";
 };
+
 
 
 
