--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -127,7 +127,7 @@
 	    eth_act_led: eth_act_led {
 	        label = "eth_act_led";
 	        gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_HIGH>;        // 硬件引脚：GPIOZ_15
-	        linux,default-trigger = "activity";                   // 触发方式：跟随网口流量状态
+	        linux,default-trigger = "activity";               // 触发方式：跟随网口流量状态
 	    };
 	
 	    /* 系统状态指示灯 */
@@ -138,7 +138,7 @@
 	        gpios = <&gpio GPIODV_24 GPIO_ACTIVE_HIGH>;       // 硬件引脚：GPIODV_24（全局编号474）
 	        default-state = "off";                            // 初始状态：关闭
 	        linux,default-trigger = "default-on";             // 触发方式：默认常亮
-            panic-indicator-inhibit
+            panic-indicator-inhibit;                          // 崩溃时自动关闭蓝灯
 	    };
 	
 	    led_red: led_red {
@@ -332,6 +332,7 @@
     mali-supply=<&vddgpu>;
 	status = "okay";
 };
+
 
 
 
