更新 meson-gxl-s905x-cumebox2.dts

--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -126,7 +126,7 @@
 	
       eth_act_led: eth_act_led {
           label = "eth_act_led";
-          gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_LOW>;
+          gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_HIGH>;
           linux,default-trigger = "mido_mux-0.0:00:link";
       };
 	
