--- a/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-gxl-s905x-cumebox2.dts
@@ -115,7 +115,7 @@
 	leds {
 	    compatible = "gpio-leds";
         pinctrl-0 = <&eth_link_led_pins>, <&eth_act_led_pins>; // 复用现有网口灯引脚组
-	      pinctrl-names = "default";
+	    pinctrl-names = "default";
 
 	    /* 网口指示灯 */
 	    eth_link_led: eth_link_led {
@@ -124,21 +124,21 @@
 	        linux,default-trigger = "mdio_mux-0.1:08:link";    // 触发方式：跟随网口链接状态
 	    };
 	
-      eth_act_led: eth_act_led {
-          label = "eth_act_led";
-          gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_HIGH>;
-          linux,default-trigger = "mido_mux-0.1:08:link";
-      };
+        eth_act_led: eth_act_led {
+            label = "eth_act_led";
+            gpios = <&gpio GPIOZ_15 GPIO_ACTIVE_HIGH>;
+            linux,default-trigger = "none";
+        };
 	
 	    /* 系统状态指示灯 */
 	    led_blue: led_blue {
 	        label = "led_blue";
 	        color = <LED_COLOR_ID_BLUE>;
-          function = LED_FUNCTION_STATUS;
+            function = LED_FUNCTION_STATUS;
 	        gpios = <&gpio GPIODV_24 GPIO_ACTIVE_HIGH>;       // 硬件引脚：GPIODV_24（全局编号474）
 	        default-state = "off";                            // 初始状态：关闭
 	        linux,default-trigger = "default-on";             // 触发方式：默认常亮
-          panic-indicator-inhibit;                          // 崩溃时自动关闭蓝灯
+            panic-indicator-inhibit;                          // 崩溃时自动关闭蓝灯
 	    };
 	
 	    led_red: led_red {
@@ -153,7 +153,7 @@
 	    led_green: led_green {
 	        label = "led_green";
 	        color = <LED_COLOR_ID_GREEN>;
-          function = LED_FUNCTION_HEARTBEAT;
+            function = LED_FUNCTION_HEARTBEAT;
 	        gpios = <&gpio GPIODV_27 GPIO_ACTIVE_HIGH>;       // 硬件引脚：GPIODV_27（全局编号477）
 	        default-state = "off";
 	        //linux,default-trigger = "heartbeat";
@@ -332,9 +332,4 @@
     mali-supply=<&vddgpu>;
 	status = "okay";
 };
-
-
-
-
-
 
